# multi-level-stacking

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  data_config.yml  parameters.yml
data/02_intermediate/: analcatdata_creditscore.csv  analcatdata_cyyoung8092.csv  analcatdata_cyyoung9302.csv  analcatdata_lawsuit.csv  australian.csv  balloons_adult_plus_stretch.csv  balloons_adult_stretch.csv  balloons_yellow_small.csv  biomed.csv  blobs_2.csv  blobs_3.csv  blobs_5.csv  blobs_7.csv  blogger.csv  blood_transfusion_service.csv  boxing1.csv  boxing2.csv  breast-cancer-wisconsin.csv  circles.csv  classification_5.csv  classification_7.csv  crx.csv  cylinder_bands.csv  diabetes.csv  donner.csv  fraud.csv  gaussian_quantiles_2.csv  gaussian_quantiles_3.csv  gaussian_quantiles_5.csv  gaussian_quantiles_7.csv  german.csv  indian_liver_patient.csv  ionosphere.csv  molecular-promotor-gene.csv  monks1.csv  monks2.csv  moons.csv  pop_failures.csv  qsar_biodegradation.csv  qualitative_bankruptcy.csv  (+8 more)
docs/source/: conf.py  index.rst
notebooks/: multi_level_stacking_graph.ipynb  result_analysis.ipynb
src/multi_level_stacking/: __init__.py  __main__.py  constants.py  critical_difference.py  pipeline_registry.py  settings.py
src/multi_level_stacking/nodes/artificial_data_generation/: artificial_data_generation.py
src/multi_level_stacking/nodes/data_processing/: data_processing_raw.py
src/multi_level_stacking/nodes/model_train/: model_train.py
src/multi_level_stacking/pipelines/data_generation/: data_generation.py
(+2 files in other folders)
