[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "multi_level_stacking"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
multi-level-stacking = "multi_level_stacking.__main__:main"

[project.optional-dependencies]
docs = [ "docutils<0.21", "sphinx>=5.3,<7.3", "sphinx_rtd_theme==2.0.0", "nbsphinx==0.8.1", "sphinx-autodoc-typehints==1.20.2", "sphinx_copybutton==0.5.2", "ipykernel>=5.3, <7.0", "Jinja2<3.2.0", "myst-parser>=1.0,<2.1",]

[tool.kedro]
package_name = "multi_level_stacking"
project_name = "multi-level-stacking"
kedro_init_version = "0.19.8"
tools = [ "Documentation", "Data Structure",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "multi_level_stacking.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "f4920e366cf04b6e82e7845f652e91e9"
